src/scss/paragraphs/_3c.scss
.block-description--3 {
  margin-bottom: 0;
  padding-bottom: 20px;
  padding-top: 20px;
  position: relative;

  .header-title {
    width: 100%;
    @media (min-width: 992px) {
      margin: 0 auto;
      width: 66%;
    }
  }

  .media-image {
    &.media {
      img {
        height: inherit;
        margin-bottom: 20px;
        max-width: 100%;
        width: auto;
      }
    }
  }

  @media (min-width: 768px) {
    .media-image {
      &.media {
        height: 270px;
        margin-bottom: 20px;
        position: relative;
        width: 100%;
        @media (min-width: 767px) and (max-width: 992px) {
          height: 160px;
        }

        img {
          left: 50%;
          max-height: 100%;
          max-width: 100%;
          position: absolute;
          top: 50%;
          transform: translateX(-50%) translateY(-50%);
          vertical-align: middle;
          width: auto;
        }
      }
    }

    .media--blazy {
      &.media {
        position: unset;
      }
    }
  }

  .field-prgf-title {
    h2 {
      @extend %title-h2;
      border-bottom: 0;
      margin-bottom: 0;
      padding-bottom: 20px;
      padding-top: 20px;
      text-align: center;
      text-transform: none;
    }
  }

  .field-prgf-description {
    padding-bottom: 20px;

    p {
      @extend %description-p;
      margin: 0;
      text-align: center;
    }
  }

  .block-description--text {
    padding: 20px;

    h4 {
      @extend %subtitle-h4;
      border-bottom: 0;
      margin-bottom: 0;
      padding-bottom: 20px;
      text-transform: uppercase;
    }

    .field-sb-body {
      font-family: $font-family-global;
      padding-bottom: 0;

      ul {
        font-size: 14px;
        list-style: none;
        margin-bottom: 0;
        margin-top: 0;
        padding-left: 30px;

        ul {
          padding-top: 20px;
          padding-left: 15px;
        }
      }

      li {
        padding-left: 10px;
        position: relative;
        padding-bottom: 10px;

        strong {
          display: contents;
        }

        &::before {
          color: $crimson;
          content: '\f10c';
          font-family: 'FontAwesome';
          font-size: 12px;
          position: absolute;
          left: -15px;
        }
      }

      p {
        @extend %sub-description-p;
        margin-bottom: 20px;
      }

      a {
        color: $crimson;
        display: contents;
        font-weight: 700;
      }
    }

    .btn-outline-primary {
      @extend %btn-global-style;
      display: inline-block;
      margin-top: 20px;
      padding: 20px;
      text-align: left;
      white-space: normal;
      width: auto;

      &:active {
        background: $crimson;
        border-color: $crimson;
      }

      &:focus {
        box-shadow: none;
      }
    }
  }
}

